--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             </li>
         </ul>
 
-        <a href="/" class="pure-menu-heading">{{logo}}</a>
+        <a href="/#!/home" class="pure-menu-heading">{{logo}}</a>
 
         <ul>
             {{#menu}}
