--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,19 @@
     </div>
 
     <script type="text/javascript">var indexJson = {{{indexJson}}};</script>
-
+<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '52925f61108d7b6a80000041');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
 </body>
 {{/records}}
 
