Mobile layout cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 	<div class="banner">
 		<div class="banner-inner">
 			<h1 class="banner-head">
-				{{bannerText}} <span class="show-related">V</span>
+				{{bannerText}}
 			</h1>
 			<!--<h2 class="banner-head sub-title">{{searchText}}</h2>-->
 			<form class="pure-form home-search">
