--- a/public/templates.html
+++ b/public/templates.html
@@ -105,15 +105,15 @@
 
                     <h3>Two Days &mdash; One Project</h3>
                     <p>
-                        After two extremely hard working days, during the hackaton (plus few commits after) we happy to introduce&nbsp;our project&nbsp;&mdash;&nbsp;<strong>DevShelf.us</strong>. It's modern, cutting the edge web application, which collect only best and well rated articles about <strong>HTML5</strong> stack of technologies.
+                        After two extremely challenging days during the Hackaton (plus few commits afterwards), we are happy to introduce&nbsp;our latest project&nbsp;&mdash;&nbsp;<strong>DevShelf.us</strong>. This is modern, cutting-edge web application, which collects only the best and most rated articles about <strong>HTML5</strong> stack of technologies.
                     </p>
 
                     <p>
-                        We provide intelligence search engine and base for <strong>your <a href="http://github.com/sourcejs/devshelf/tree/master/article_data">contributed data</a></strong> inside our application, to present you only best and relevant information about that new technologies which are you looking for.
+                        We provide search engine intelligence and base for <strong>your <a href="http://github.com/sourcejs/devshelf/tree/master/article_data">contributed data</a></strong> inside our application, to present you only best and relevant information about those new technologies, which you are looking for.
                     </p>
 
                     <p>
-                        Project was developed and now supported by <a href='http://corp.mail.ru/en/communications/odnoklassniki'>OK.ru</a> front-end development team (creators of <a href="http://sourcejs.com">Source</a> and <a href="http://operatino.github.io/MCSS/en/">MCSS</a>), but as we're fully <a href="http://github.com/sourcejs/devshelf/tree/master/article_data">open source</a>, everybody could join us and <strong>make web a better place.</strong>
+                        Project has been developed and now is supported by <a href='http://corp.mail.ru/en/communications/odnoklassniki'>OK.ru</a> front-end development team (creators of <a href="http://sourcejs.com">Source</a> and <a href="http://operatino.github.io/MCSS/en/">MCSS</a>), but as we are fully <a href="http://github.com/sourcejs/devshelf/tree/master/article_data">open source</a>, everybody can join us and <strong>make web a better place</strong>.
                     </p>
 
                     <p>Check out our team below.</p>
