fix spaces in address bar

--- a/public/templates.html
+++ b/public/templates.html
@@ -49,7 +49,7 @@
                 under tags
 
                 {{#tags}}
-                <a class="article-category article-category-js" href="/#!/search/{{.}}">{{.}}</a>
+                	<a class="article-category article-category-js" href="/#!/search/{{tagLink}}">{{tagTitle}}</a>
                 {{/tags}}
             </p>
 
