--- a/public/templates.html
+++ b/public/templates.html
@@ -82,6 +82,10 @@
 </script>
 
 <script type="text/x-jquery-tmpl" id="menu-logined">
+	<li class="user-login_item">
+		<span class="user-language js-language __en">en</span>
+		<span class="user-language js-language __ru">ru</span>
+	</li>
     <li class="user-login_item">
         <span class="user-name"><i class="fa fa-user"></i> {{username}}</span>
     </li>
@@ -91,6 +95,10 @@
 </script>
 
 <script type="text/x-jquery-tmpl" id="menu-not-logined">
+	<li class="user-login_item">
+		<span class="user-language js-language __en">en</span>
+		<span class="user-language js-language __ru">ru</span>
+	</li>
     <li class="user-login_item">
         <a href="#" class="user-login js-login"><i class="fa fa-user"></i> Log in</a>
     </li>
