--- a/public/templates.html
+++ b/public/templates.html
@@ -2,8 +2,8 @@
     <div class="pure-g-r" id="layout">
         <div class="sidebar pure-u">
             <header class="sidebar-header">
-                <h1 class="sidebar-header-title">Related Tags <span class="mobile-menu-toggle related"><i class="fa fa-toggle-down"></i></span></h1>
-                <!-- <h2 class="brand-tagline">Check out more:</h2> -->
+                <h1 class="sidebar-header-title">{{related}} <span class="mobile-menu-toggle related"><i class="fa fa-toggle-down"></i></span></h1>
+                <!-- <h2 class="brand-tagline">{{checkoutmore}}:</h2> -->
 
                 <nav class="nav mobile-menu-part" id="nav-list"></nav>
             </header>
@@ -13,8 +13,8 @@
 
             <div class="content">
             <form class="pure-form main-search">
-                <input type="text" class="pure-input js-search-input js-search-input-interactive" placeholder="Search next..." tabindex="1" value="{{getParams}}">
-                <button type="submit" class="pure-button js-search-button"><i class="fa fa-search" title="Find!"></i></button>
+                <input type="text" class="pure-input js-search-input js-search-input-interactive" placeholder="{{placeholder}}..." tabindex="1" value="{{getParams}}">
+                <button type="submit" class="pure-button js-search-button"><i class="fa fa-search" title="{{button}}!"></i></button>
             </form>
                 <div class="posts" id="posts-output">
 
@@ -26,13 +26,13 @@
 
 
 <script type="text/x-jquery-tmpl" id="search-output">
-    <h1 class="content-subhead">Results {{total}}</h1>
+    <h1 class="content-subhead">{{resultsLabel}} {{total}}</h1>
 
     <ul class="article-list">
         {{#resultList}}
         <li class="article-item js-vote-item" data-id="{{id}}">
             {{#author-mail-hash}}
-            <a href="{{author-link}}" class="article-author-link" title="About {{author}}" target="_blank">
+            <a href="{{author-link}}" class="article-author-link" title="{{about}} {{author}}" target="_blank">
                 <img class="article-avatar" alt="{{author}}" height="48" width="48" src="http://www.gravatar.com/avatar/{{author-mail-hash}}">
             </a>
             {{/author-mail-hash}}
@@ -46,7 +46,7 @@
                     {{/author-link}}
                 {{/author}}
 
-                under tags
+                {{underTags}}
 
                 {{#tags}}
                 	<a class="article-category article-category-js" href="/#!/search/{{tagLink}}">{{tagTitle}}</a>
@@ -58,11 +58,11 @@
             {{/description}}
 
             <p class="article-voting">
-                <button class="pure-button js-vote" title="Vote Up+" data-vote-type="plus">
+                <button class="pure-button js-vote" title="{{voteUp}}+" data-vote-type="plus">
                     <i class="fa fa-thumbs-up"></i>
                 </button>
-                <span class="article-rating positive js-vote-result">{{votes}}</span>
-                <button class="pure-button js-vote" title="Vote Down-" data-vote-type="minus">
+                <span class="article-rating {{popularity}} js-vote-result">{{votes}}</span>
+                <button class="pure-button js-vote" title="{{voteDown}}-" data-vote-type="minus">
                     <i class="fa fa-thumbs-down"></i>
                 </button>
             </p>
@@ -90,7 +90,7 @@
         <span class="user-name"><i class="fa fa-user"></i> {{username}}</span>
     </li>
     <li class="user-login_item">
-        <a href="/logout" class="user-logout js-logout"><i class="fa fa-umbrella"></i> Log out</a>
+        <a href="/logout" class="user-logout js-logout"><i class="fa fa-umbrella"></i> {{login}}</a>
     </li>
 </script>
 
@@ -100,7 +100,7 @@
 		<span class="user-language js-language __ru">ru</span>
 	</li>
     <li class="user-login_item">
-        <a href="#" class="user-login js-login"><i class="fa fa-user"></i> Log in</a>
+        <a href="#" class="user-login js-login"><i class="fa fa-user"></i> {{login}}</a>
     </li>
 </script>
 
@@ -109,22 +109,12 @@
         <div class="pure-g-r content-ribbon">
             <div class="pure-u-2-3">
                 <div class="l-box">
-                    <h4 class="content-subhead">About the project</h4>
+                    <h4 class="content-subhead">{{aboutProject}}</h4>
 
-                    <h3>Two Days &mdash; One Project</h3>
-                    <p>
-                        After two extremely challenging days during the Hackaton (plus few commits afterwards), we are happy to introduce&nbsp;our latest project&nbsp;&mdash;&nbsp;<strong>DevShelf.us</strong>. This is modern, cutting-edge web application, which collects only the best and most rated articles about <strong>HTML5</strong> stack of technologies.
-                    </p>
-
-                    <p>
-                        We provide search engine intelligence and base for <strong>your <a href="http://github.com/sourcejs/devshelf/tree/master/article_data">contributed data</a></strong> inside our application, to present you only best and relevant information about those new technologies, which you are looking for.
-                    </p>
-
-                    <p>
-                        Project has been developed and now is supported by <a href='http://corp.mail.ru/en/communications/odnoklassniki'>OK.ru</a> front-end development team (creators of <a href="http://sourcejs.com">Source</a> and <a href="http://operatino.github.io/MCSS/en/">MCSS</a>), but as we are fully <a href="http://github.com/sourcejs/devshelf/tree/master/article_data">open source</a>, everybody can join us and <strong>make web a better place</strong>.
-                    </p>
-
-                    <p>Check out our team below.</p>
+                    <h3>{{{header}}}</h3>
+                        {{#description}}
+                            <p>{{{p}}}</p>
+                        {{/description}}
                 </div>
             </div>
 
@@ -138,74 +128,21 @@
         <div class="pure-g-r content-ribbon last">
             <div class="pure-u-1">
                 <div class="l-box">
-                    <h4 class="content-subhead">About the team</h4>
+                    <h4 class="content-subhead">{{aboutTeam}}</h4>
                 </div></div>
-
+            {{#theTeam}}
             <div class="pure-u-1-5">
                 <div class="l-box">
-                    <h3>Robert Haritonov</h3>
-                    <p>
-                        <a href="http://twitter.com/operatino_en" target="_blank">@operatino</a>, <a href="http://rhr.me" target="_blank">rhr.me</a>
-                    </p>
-                    <p>
-                        Idea, organization, voting and launch.
-                    </p>
+                    <h3>{{name}}</h3>
+                    <p>{{{contacts}}}</p>
+                    <p>{{role}}</p>
                 </div>
             </div>
-
-            <div class="pure-u-1-5">
-                <div class="l-box">
-                    <h3>Ivan Metelev</h3>
-                    <p>
-                        <a href="http://twitter.com/from_anywhere" target="_blank">@from_anywhere</a>, <a href="http://welovehtml.ru/" target="_blank">welovehtml.ru</a>
-                    </p>
-                    <p>
-                        Templating structure and navigation.
-                    </p>
-                </div>
-            </div>
-
-            <div class="pure-u-1-5">
-                <div class="l-box">
-                    <h3>Juris Pukitis</h3>
-                    <p>
-                        <a href="http://twitter.com/jur4eg" target="_blank">@jur4eg</a>
-                    </p>
-                    <p>
-                        Node JS back-end supplier, data caching.
-                    </p>
-                </div>
-            </div>
-
-            <div class="pure-u-1-5">
-                <div class="l-box">
-                    <h3>Dmitry Lapynov</h3>
-                    <p>
-                        <a href="http://twitter.com/lapynow" target="_blank">@lapynow</a>
-                    </p>
-                    <p>
-                        Search engine and layout.
-                    </p>
-                </div>
-            </div>
-
-            <div class="pure-u-1-5">
-                <div class="l-box">
-                    <h3>Andrew Ivashkevich</h3>
-                    <p>
-                        <a href="http://twitter.com/ymaz_x0" target="_blank">@ymaz_x0</a>
-                    </p>
-                    <p>
-                        Layout ideas and solutions.
-                    </p>
-                </div>
-            </div>
-
-
+            {{/theTeam}}
         </div>
 
         <div class="l-box ribbon">
-            <h2 class="about-us_btn"><a href="https://github.com/sourcejs/devshelf/issues" class="pure-button pure-button-primary"><i class="fa fa-envelope"></i> Stay in touch</a></h2>
+            <h2 class="about-us_btn"><a href="https://github.com/sourcejs/devshelf/issues" class="pure-button pure-button-primary"><i class="fa fa-envelope"></i> {{contactUs}}</a></h2>
         </div>
     </div>
 
