--- a/public/templates.html
+++ b/public/templates.html
@@ -12,10 +12,12 @@
         <div class="pure-u-1">
 
             <div class="content">
-            <form class="pure-form main-search">
-                <input type="text" class="pure-input js-search-input js-search-input-interactive" placeholder="{{placeholder}}..." tabindex="1" value="{{getParams}}">
-                <button type="submit" class="pure-button js-search-button"><i class="fa fa-search" title="{{button}}!"></i></button>
-            </form>
+				<div class="pure-form main-search">
+					<form>
+						<input type="text" class="pure-input js-search-input js-search-input-interactive" placeholder="{{placeholder}}..." tabindex="1" value="{{getParams}}" autofocus="autofocus" />
+						<button type="submit" class="pure-button js-search-button"><i class="fa fa-search" title="{{button}}!"></i></button>
+					</form>
+				</div>
                 <div class="posts" id="posts-output">
 
                 </div>
