Authorisation cache and some refactorings #2

--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,7 @@
 	</div>
 </div>
 
-<script type="text/javascript">var indexJson = {{{indexJson}}};</script>
+<script type="text/javascript">var appData = {{{appData}}};</script>
 <script type="text/javascript">
 	var _gauges = _gauges || [];
 	(function() {
