--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 {{#records}}
 <html lang="{{lang}}">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="A layout example that shows off a responsive pricing table.">
+	<meta name="description" content="{{bannerText}}">
 
 	<title>{{title}}</title>
 
@@ -121,8 +121,7 @@
 
 		<div class="pricing-tables pure-g-r">
 
-
-
+            {{#catalogue}}
 			<div class="pure-u-1-4">
 				<div class="pricing-table column-html5">
                     <a href="#!/search/html">
@@ -181,6 +180,7 @@
 					</ul>
 				</div>
 			</div>
+			{{/catalogue}}
 		</div>
 
 		<div class="information pure-g-r">
