rewrite modals and fixed styles

--- a/public/index.html
+++ b/public/index.html
@@ -30,68 +30,71 @@
 	</ul>
 </div>
 
-<div id="addNewUrlModal" class="login-popup" style="display: none">
-    <div class="pure-g-r">
-        <div class="pure-u-1">
-            <header class="login-popup-header login-popup-padding">
-                <h3 class="login-popup-title main">Add new articles</h3>
-            </header>
-            <div class="login-popup-desc login-popup-padding">
-                <form id="addNewUrlForm" class="pure-form pure-form-aligned">
-                <fieldset>
-                    <div class="pure-control-group">
-                        <label for="url">URL <sup>*</sup></label>
-                        <input id="url" name="url" type="url" placeholder="URL" class="pure-input-1-2" required>
-                    </div>
+<div id="addNewUrlModal" class="popup">
+	<div class="popup_cnt">
+		<div class="pure-g-r">
+			<div class="pure-u-1">
+				<header class="popup-header popup-padding">
+					<h3 class="popup-title main">Add new articles</h3>
+					<span class="popup-close js-popup-close" title="Close me"><i class="fa fa-times-circle"></i></span>
+				</header>
+				<div class="popup-desc popup-padding">
+					<form id="addNewUrlForm" class="pure-form pure-form-aligned">
+					<fieldset>
+						<div class="pure-control-group">
+							<label for="url">URL <sup>*</sup></label>
+							<input id="url" name="url" type="url" placeholder="URL" class="pure-input-1-2" required>
+						</div>
 
-                    <div class="pure-control-group">
-                        <label for="title">Title <sup>*</sup></label>
-                        <input id="title" name="title" type="text" placeholder="Title" class="pure-input-1-2" required>
-                    </div>
+						<div class="pure-control-group">
+							<label for="title">Title <sup>*</sup></label>
+							<input id="title" name="title" type="text" placeholder="Title" class="pure-input-1-2" required>
+						</div>
 
-                    <div class="pure-control-group">
-                        <label for="author">Author</label>
-                        <input id="author" name="author" type="text" placeholder="Author" class="pure-input-1-2">
-                    </div>
+						<div class="pure-control-group">
+							<label for="author">Author</label>
+							<input id="author" name="author" type="text" placeholder="Author" class="pure-input-1-2">
+						</div>
 
-                    <div class="pure-control-group">
-                        <label for="author-link">Author link</label>
-                        <input id="author-link" name="author-link" type="text" placeholder="Author link" class="pure-input-1-2">
-                    </div>
+						<div class="pure-control-group">
+							<label for="author-link">Author link</label>
+							<input id="author-link" name="author-link" type="text" placeholder="Author link" class="pure-input-1-2">
+						</div>
 
-                    <div class="pure-control-group">
-                        <label for="author-mail">Author mail</label>
-                        <input id="author-mail" name="author-mail" type="text" placeholder="Author mail" class="pure-input-1-2">
-                    </div>
+						<div class="pure-control-group">
+							<label for="author-mail">Author mail</label>
+							<input id="author-mail" name="author-mail" type="text" placeholder="Author mail" class="pure-input-1-2">
+						</div>
 
-                    <div class="pure-control-group">
-                        <label for="author-mail-hash">Author mail hash</label>
-                        <input id="author-mail-hash" name="author-mail-hash" type="text" placeholder="Author mail hash" class="pure-input-1-2">
-                    </div>
+						<div class="pure-control-group">
+							<label for="author-mail-hash">Author mail hash</label>
+							<input id="author-mail-hash" name="author-mail-hash" type="text" placeholder="Author mail hash" class="pure-input-1-2">
+						</div>
 
-                    <div class="pure-control-group">
-                        <label for="category">Category</label>
-                        <select name="category" id="category" class="pure-input-1-2">
-                            <option value="">-</option>
+						<div class="pure-control-group">
+							<label for="category">Category</label>
+							<select name="category" id="category" class="pure-input-1-2">
+								<option value="">-</option>
 
-                        </select>
-                    </div>
+							</select>
+						</div>
 
-                    <div class="pure-control-group">
-                        <label for="tags">Tags</label>
-                        <input id="tags" type="text"  placeholder="">
-                    </div>
+						<div class="pure-control-group">
+							<label for="tags">Tags <sup>*</sup></label>
+							<input id="tags" type="text"  placeholder="">
+						</div>
 
-					<div class="pure-control-group form-errors"></div>
+						<div class="pure-control-group form-errors"></div>
 
-                    <div class="pure-controls">
-                        <button type="submit" class="pure-button pure-button-primary">Add article</button>
-                    </div>
-                </fieldset>
-            </form>
-                </div>
-        </div>
-    </div>
+						<div class="pure-controls">
+							<button type="submit" class="pure-button pure-button-primary">Add article</button>
+						</div>
+					</fieldset>
+				</form>
+					</div>
+			</div>
+		</div>
+	</div>
 
 </div>
 
@@ -201,23 +204,24 @@
 	</script>
 <!-- /main page template -->
 
-<div id="login-popup" class="login-popup">
-	<div class="pure-g-r">
-		<div class="pure-u-1">
+<div id="login-popup" class="popup">
+	<div class="popup_cnt">
+		<div class="pure-g-r">
+			<div class="pure-u-1">
 
-			<header class="login-popup-header login-popup-padding">
-				<h3 class="login-popup-title main">Authorization required</h3>
-				<span class="login-popup-close js-login-popup-close" title="Close me"><i class="fa fa-times-circle"></i></span>
-			</header>
+				<header class="popup-header popup-padding">
+					<h3 class="popup-title main">Authorization required</h3>
+					<span class="popup-close js-popup-close" title="Close me"><i class="fa fa-times-circle"></i></span>
+				</header>
 
-			<div class="login-popup-desc login-popup-padding">
-				<p>We use your account details to accept the votes</p>
-				<p class="login-popup-buttons-set">
-					<span>Please login through</span>
-					<a class="pure-button js-login" href="#"><i class="fa fa-github-alt" title="GitHub"></i> GitHub</a>
-				</p>
+				<div class="popup-desc popup-padding">
+					<p>We use your account details to accept the votes</p>
+					<p class="popup-buttons-set">
+						<span>Please login through</span>
+						<a class="pure-button js-login" href="#"><i class="fa fa-github-alt" title="GitHub"></i> GitHub</a>
+					</p>
+				</div>
 			</div>
-
 		</div>
 	</div>
 </div>
