--- a/public/templates.html
+++ b/public/templates.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="pure-u-1">
-
+h
             <div class="content">
 				<div class="pure-form main-search">
 					<form>
@@ -102,8 +102,8 @@
 
 <script type="text/x-jquery-tmpl" id="menu-logined">
 	<li class="user-login_item">
-		<span class="user-language js-language __en">en</span>
-		<span class="user-language js-language __ru">ru</span>
+		<span class="user-language js-language __en" role="action">en</span>
+		<span class="user-language js-language __ru" role="action">ru</span>
 	</li>
     <li class="user-login_item">
         <span class="user-name"><i class="fa fa-user"></i> {{username}}</span>
@@ -115,8 +115,8 @@
 
 <script type="text/x-jquery-tmpl" id="menu-not-logined">
 	<li class="user-login_item">
-		<span class="user-language js-language __en">en</span>
-		<span class="user-language js-language __ru">ru</span>
+		<span class="user-language js-language __en" role="action">en</span>
+		<span class="user-language js-language __ru" role="action">ru</span>
 	</li>
     <li class="user-login_item">
         <a href="#" class="user-login js-login"><i class="fa fa-user"></i> {{login}}</a>
