Fixed UI of addNewUrl modal

--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,8 @@
 						</div>
 
 						<div class="pure-control-group">
-							<label for="category">Category</label>
-							<select name="category" id="category" class="pure-input-1-2">
+							<label for="category">Category <sup>*</sup></label>
+							<select name="category" id="category" class="pure-input-1-2 isl isl__promo">
 								<option value="">-</option>
 
 							</select>
