Submit form: client + server side

--- a/public/index.html
+++ b/public/index.html
@@ -67,15 +67,9 @@
 						</div>
 
 						<div class="pure-control-group">
-							<label for="author-mail-hash">Author mail hash</label>
-							<input id="author-mail-hash" name="author-mail-hash" type="text" placeholder="Author mail hash" class="pure-input-1-2">
-						</div>
-
-						<div class="pure-control-group">
 							<label for="category">Category <sup>*</sup></label>
-							<select name="category" id="category" class="pure-input-1-2 isl isl__promo">
+							<select name="category" id="category" class="pure-input-1-2" required>
 								<option value="">-</option>
-
 							</select>
 						</div>
 
