--- a/public/templates.html
+++ b/public/templates.html
@@ -171,3 +171,31 @@ h
         </div>
     </div>
 </script>
+
+<script type="text/x-jquery-tmpl" id="bookmarklet" data-url="bookmarklet" title="Bookmarklet">
+    <div class="content">
+
+		<div class="l-box">
+			<h4 class="content-subhead">{{bookmarkletToolsTitle}}</h4>
+			<h3>{{bookmarkletMainTitle}}</h3>
+				{{#description}}
+					<p>{{{p}}}</p>
+				{{/description}}
+			<p></p>
+			<h4 class="content-subhead">{{bookmarkletUsageTitle}}</h4>
+			<p>{{bookmarkletUsageDesc}}</p>
+			<p>
+				<code>
+					javascript:(function(a,b){a.DS=a.DS||{};var c=b.createElement(&quot;div&quot;);void 0===a.DS.panel&amp;&amp;function(){a.DS.panel=!0;c.className=&quot;ds-helper&quot;;c.innerHTML=&quot;&lt;div class = &#39;ds-helper_cnt&#39; style=&#39;text-align: left; position: fixed; background: #fcfcfc; top: 30px; right: 30px; border: 1px darkgray solid; padding: 10px; z-index: 99999; font: 12px/1.2 Arial, sans-serif; border-radius: 5px;&#39;&gt;&lt;div class=&#39;ds-helper_url_cnt&#39; style=&#39;padding: 10px 0&#39;&gt;&lt;label style=&#39;display: block; font-size: 14px; color: #526066;&#39;&gt;Article link&lt;/label&gt; &lt;input type=&#39;url&#39; class=&#39;ds-helper_url&#39; name=&#39;url&#39; style=&#39;padding: .5em .6em; font-size: 13px; width: 200px; display: inline-block; border: 1px solid #ccc; box-shadow: inset 0 1px 3px #ddd; border-radius: 4px;&#39;/&gt;&lt;/div&gt;&lt;div class=&#39;ds-helper_ac_cnt&#39; style=&#39;padding: 5px 0 10px&#39;&gt;&lt;label style=&#39;display: block; font-size: 14px; color: #526066;&#39;&gt;&lt;input type=&#39;radio&#39; name=&#39;field&#39; checked=&#39;checked&#39; id=&#39;title&#39; /&gt;&amp;nbsp;&amp;nbsp;Choose title by click:&lt;/label&gt;  &lt;input type=&#39;text&#39; class=&#39;ds-helper_ac&#39; name=&#39;title&#39; style=&#39;padding: .5em .6em; width: 200px; font-size: 13px; display: inline-block; border: 1px solid #ccc; box-shadow: inset 0 1px 3px #ddd; border-radius: 4px;&#39;/&gt;&lt;/div&gt;&lt;div class=&#39;ds-helper_ac_cnt&#39; style=&#39;padding: 5px 0 10px&#39;&gt;&lt;label style=&#39;display: block; font-size: 14px; color: #526066;&#39;&gt;&lt;input type=&#39;radio&#39; name=&#39;field&#39; id=&#39;author&#39; /&gt;&amp;nbsp;&amp;nbsp;Choose author by click (opt):&lt;/label&gt;  &lt;input type=&#39;text&#39; class=&#39;ds-helper_author&#39; name=&#39;author&#39; style=&#39;padding: .5em .6em; width: 200px; font-size: 13px; display: inline-block; border: 1px solid #ccc; box-shadow: inset 0 1px 3px #ddd; border-radius: 4px;&#39;/&gt;&lt;/div&gt;&lt;div class=&#39;ds-helper_submit&#39;&gt;&lt;button onclick=&#39;window.open(\&quot;http://devshelf.us/?url=\&quot; + window.DS.href + \&quot;&amp;title=\&quot; + window.DS.title + \&quot;&amp;author=\&quot; + window.DS.author, \&quot;mywindow\&quot;,\&quot;width=500,height=540\&quot;)&#39; class=&#39;ds-helper_button&#39; style=&#39;display: none; background-color: #0078e7; color: #fff; padding: .5em 1.5em .5em; font-size: 16px; border-radius: 2px; border: 0 none; cursor: pointer&#39;&gt;Send&lt;/button&gt;&lt;/div&gt;&lt;div class=&#39;ds-helper_close&#39; style=&#39;position: absolute; top: 2px; right: 9px; font-weight: 700; color: gray; font-size: 18px; font-family: Verdana, sans-serif; cursor: pointer&#39;&gt;x&lt;/div&gt;&lt;/div&gt;&quot;;<br/>b.body.appendChild(c);a.DS.href=window.location.href;b.querySelector(&quot;.ds-helper_url&quot;).value=a.DS.href;void 0===a.DS.listener&amp;&amp;function(){a.DS.listener=!0;c.addEventListener(&quot;click&quot;,function(a){a.stopPropagation()});b.querySelector(&quot;.ds-helper_close&quot;).addEventListener(&quot;click&quot;,function(d){b.body.removeChild(c);a.DS.panel=void 0;a.DS.listener=void 0;a.DS.title=&quot;&quot;;a.DS.author=&quot;&quot;});a.addEventListener(&quot;click&quot;,function(c){a.DS.listener&amp;&amp;(c.preventDefault(),b.getElementById(&quot;title&quot;).checked?(a.DS.title=<br/>c.target.textContent,b.getElementById(&quot;author&quot;).checked=!0,b.querySelector(&quot;.ds-helper_button&quot;).style.display=&quot;block&quot;):a.DS.author=c.target.textContent,b.querySelector(&quot;.ds-helper_ac&quot;).value=a.DS.title||&quot;&quot;,b.querySelector(&quot;.ds-helper_author&quot;).value=a.DS.author||&quot;&quot;)});b.querySelector(&quot;.ds-helper_url&quot;).addEventListener(&quot;blur&quot;,function(){a.DS.listener&amp;&amp;(a.DS.href=b.querySelector(&quot;.ds-helper_url&quot;).value)})}()}()})(window,document);
+				</code>
+			</p>
+		 </div>
+
+    </div>
+
+    <div class="pure-g-r">
+        <div class="footer pure-u-1">
+            {{{copy}}}
+        </div>
+    </div>
+</script>
