--- a/public/index.html
+++ b/public/index.html
@@ -24,83 +24,83 @@
 		{{/menu}}
 	</ul>
 	<ul class="user-login mobile-menu-part" id="user-login">
+        <!--Filled dynamically, demo:-->
 		<!--<li class="user-login_item" style="display: none">-->
 			<!--<a href="#" class="user-login js-login"><i class="fa fa-user"></i> {{login}}</a>-->
 		<!--</li>-->
 	</ul>
 </div>
 
+<!--TODO: move to template like others-->
 <div id="addNewUrlModal" class="popup">
 	<div class="popup_cnt">
 		<div class="pure-g-r">
 			<div class="pure-u-1">
 				<header class="popup-header popup-padding">
-					<h3 class="popup-title main">Add new articles</h3>
+					<h3 class="popup-title main">{{formModalTitle}}</h3>
 					<span class="popup-close js-popup-close" title="Close me"><i class="fa fa-times-circle"></i></span>
 				</header>
 				<div class="popup-desc popup-padding">
 					<form id="addNewUrlForm" class="pure-form pure-form-aligned">
-					<fieldset>
-						<div class="pure-control-group">
-							<label class="pure-input-1-2" for="url">URL <sup>*</sup></label>
-							<input id="url" name="url" type="url" placeholder="URL" class="pure-input-1-2" required>
-						</div>
+                        <fieldset>
+                            <div class="pure-control-group">
+                                <label class="pure-input-1-2" for="url">{{formURL}} <sup>*</sup></label>
+                                <input id="url" name="url" type="url" placeholder="URL" class="pure-input-1-2" required>
+                            </div>
 
-						<div class="pure-control-group">
-							<label class="pure-input-1-2" for="lang">Lang <sup>*</sup></label>
-							<select name="lang" id="lang" class="pure-input-1-2" required>
-								<option value="-1">-</option>
-								<option value="RU">RU</option>
-								<option value="EN">EN</option>
-							</select>
-						</div>
+                            <div class="pure-control-group">
+                                <label class="pure-input-1-2" for="title">{{formTitle}} <sup>*</sup></label>
+                                <input id="title" name="title" type="text" placeholder="Title" class="pure-input-1-2" required>
+                            </div>
 
-						<div class="pure-control-group">
-							<label class="pure-input-1-2" for="title">Title <sup>*</sup></label>
-							<input id="title" name="title" type="text" placeholder="Title" class="pure-input-1-2" required>
-						</div>
+                            <div class="pure-control-group">
+                                <label for="category">{{formCategory}} <sup>*</sup></label>
+                                <select name="category" id="category" class="pure-input-1-2" required>
+                                    <option value="">-</option>
+                                </select>
+                            </div>
 
-						<div class="pure-control-group">
-							<label for="author">Author</label>
-							<input id="author" name="author" type="text" placeholder="Author" class="pure-input-1-2">
-						</div>
+                            <div class="pure-control-group">
+                                <label class="pure-input-1-2" for="lang">{{formLang}} </label>
+                                <select name="lang" id="lang" class="pure-input-1-2">
+                                    <option value="en" selected>EN</option>
+                                    <option value="ru">RU</option>
+                                </select>
+                            </div>
 
-						<div class="pure-control-group">
-							<label for="author-link">Author link</label>
-							<input id="author-link" name="author-link" type="text" placeholder="Author link" class="pure-input-1-2">
-						</div>
+                            <div class="pure-control-group">
+                                <label for="author">{{formAuthor}}</label>
+                                <input id="author" name="author" type="text" placeholder="{{formAuthor}}" class="pure-input-1-2">
+                            </div>
 
-						<div class="pure-control-group">
-							<label for="author-mail">Author mail</label>
-							<input id="author-mail" name="author-mail" type="text" placeholder="Author mail" class="pure-input-1-2">
-						</div>
+                            <div class="pure-control-group">
+                                <label for="author-link">{{formAuthorLink}}</label>
+                                <input id="author-link" name="author-link" type="text" placeholder="{{formAuthorLink}}" class="pure-input-1-2">
+                            </div>
 
-						<div class="pure-control-group">
-							<label for="category">Category <sup>*</sup></label>
-							<select name="category" id="category" class="pure-input-1-2" required>
-								<option value="">-</option>
-							</select>
-						</div>
+                            <div class="pure-control-group">
+                                <label for="author-mail">{{formAuthorMail}}</label>
+                                <input id="author-mail" name="author-mail" type="text" placeholder="{{formAuthorMail}}" class="pure-input-1-2">
+                            </div>
 
-						<div class="pure-control-group">
-							<label for="tags">Tags <sup>*</sup></label>
-							<input id="tags" type="text"  placeholder="">
-						</div>
+                            <div class="pure-control-group">
+                                <label for="tags">{{formTags}} <sup>*</sup></label>
+                                <input id="tags" type="text">
+                            </div>
 
-						<div class="pure-control-group form-errors"></div>
-						<div class="pure-control-group form-success"></div>
+                            <div class="pure-control-group form-errors"></div>
+                            <div class="pure-control-group form-success"></div>
 
-						<div class="pure-controls">
-							<button type="submit" class="pure-button pure-button-primary">Add article</button>
-						</div>
-					</fieldset>
-				</form>
-					</div>
+                            <div class="pure-controls">
+                                <button type="submit" class="pure-button pure-button-primary">{{formSubmit}}</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
 			</div>
 		</div>
 		<div class="spinner"></div>
 	</div>
-
 </div>
 
 <!-- content area -->
@@ -209,20 +209,21 @@
 	</script>
 <!-- /main page template -->
 
+<!--TODO: move to template like others-->
 <div id="login-popup" class="popup">
 	<div class="popup_cnt">
 		<div class="pure-g-r">
 			<div class="pure-u-1">
 
 				<header class="popup-header popup-padding">
-					<h3 class="popup-title main">Authorization required</h3>
+					<h3 class="popup-title main">{{authModalTitle}}</h3>
 					<span class="popup-close js-popup-close" title="Close me"><i class="fa fa-times-circle"></i></span>
 				</header>
 
 				<div class="popup-desc popup-padding">
-					<p>We use your account details to accept the votes</p>
+					<p>{{authDescr}}</p>
 					<p class="popup-buttons-set">
-						<span>Please login through</span>
+						<span>{{authLoginWelcome}}</span>
 						<a class="pure-button js-login" href="#"><i class="fa fa-github-alt" title="GitHub"></i> GitHub</a>
 					</p>
 				</div>
