Сделал зависимость между выбором категории и тегами.

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                             <div class="pure-control-group">
                                 <label for="category">{{formCategory}} <sup>*</sup></label>
                                 <select name="category" id="category" class="pure-input-1-2" required>
-                                    <option value="">-</option>
+                                    <option value="-1">-</option>
                                 </select>
                             </div>
 
