--- a/public/templates.html
+++ b/public/templates.html
@@ -25,7 +25,7 @@
     </div>
 </script>
 
-
+<!--TODO: локализовать "by",  показать автора без ссылки-->
 <script type="text/x-jquery-tmpl" id="search-output">
     <h1 class="content-subhead">{{resultsLabel}} {{total}}</h1>
 
