First page is static

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,8 @@
 <!-- /content area -->
 
 <!-- main page template -->
-<script type="text/x-jquery-tmpl" id="main-page" title="Main page" data-url="">
+
+<div id="main-page">
 	<div class="banner">
 		<div class="banner-inner">
 			<h1 class="banner-head">
@@ -211,7 +212,7 @@
 	<div class="footer">
         &copy; {{{copy}}}
 	</div>
-	</script>
+</div>
 <!-- /main page template -->
 
 <!--TODO: move to template like others-->
