--- a/public/templates.html
+++ b/public/templates.html
@@ -43,7 +43,11 @@
             <p class="article-meta">
                 {{#author}}
                     {{#author-link}}
-                        By <a href="{{author-link}}" class="article-author" target="_blank">{{author}}</a>
+                        By <a href="{{author-link}}" class="article-author" target="_blank">{{author}}</a>,
+                    {{/author-link}}
+
+                    {{^author-link}}
+                        By {{author}},
                     {{/author-link}}
                 {{/author}}
 
