Improving auto-suggest data Stripping html in search results Small app.js main page serving func restructurization

--- a/public/templates.html
+++ b/public/templates.html
@@ -59,7 +59,7 @@
             </p>
 
             {{#description}}
-            <p class="article-description">{{{description}}}</p>
+            <p class="article-description">{{description}}</p>
             {{/description}}
 
             <p class="article-voting">
