--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 {{#records}}
 <html lang="{{lang}}">
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="fragment" content="!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="{{bannerText}}">
 
