--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="fragment" content="!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="{{bannerText}}">
+	<meta name="description" content="{{description}}">
 
 	<title>{{title}}</title>
 
